k3s/apps/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: dashboard-network
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: web
      port: 8110
      targetPort: 80
      protocol: TCP
