k3s/apps/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: dashboard-network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: pihole
          port: 8110
  tls:
    secretName: wildcard-home-ijlalahmad-dev-tls
